--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "figlet": "^1.5.2",
+    "fs-extra": "^10.1.0",
     "maven": "^4.7.0",
     "recursive-copy": "^2.0.10"
   },
